--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 server.port=8080
-vaadin.compatibilityMode
+#vaadin.compatibilityMode
+
+management.endpoint.shutdown.enabled=true
+spring.datasource.url=jdbc:h2:~/finalWeb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.settings.web-allow-others=true
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+#Configuraci?n para habilitar la consola de H2
+spring.h2.console.enabled=true
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
